// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init basic init 1`] = `
"Initializing Optic...
Detecting OpenAPI specs in $workspace$...

Found 1 valid spec

Adding files:
- path: example-api-v0.json
  id: Empty

Adding ruleset:
- breaking-changes

File IDs are stable identifiers for your API specifications that will appear in Optic.
You can change them now before you check in the optic.dev.yml file.
"
`;

exports[`init init with \`--ci github-action\` option 1`] = `
"Initializing Optic...
Detecting OpenAPI specs in $workspace$...

Found 1 valid spec

Adding files:
- path: example-api-v0.json
  id: Empty

Adding ruleset:
- breaking-changes

File IDs are stable identifiers for your API specifications that will appear in Optic.
You can change them now before you check in the optic.dev.yml file.

Setting up CI:
- Github action file written to $workspace$/.github/workflows/optic-ci.yml

Set your OPTIC_TOKEN Github secret to finish configuring Optic CI.
More details at: https://github.com/opticdev/github-action/
"
`;

exports[`init init with \`--ci-only github-action\` option 1`] = `
"Deprecation warning: optic.yml file is deprecated. Please rename your file to optic.dev.yml
Initializing Optic...

Setting up CI:
- Github action file written to $workspace$/.github/workflows/optic-ci.yml

Set your OPTIC_TOKEN Github secret to finish configuring Optic CI.
More details at: https://github.com/opticdev/github-action/
"
`;

exports[`init init with existing optic.init.yml 1`] = `
"Deprecation warning: optic.yml file is deprecated. Please rename your file to optic.dev.yml
Error: a configuration file already exists at $workspace$/optic.yml.
"
`;
